--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "This notebook consists of 4 exercises:\n",
     "\n",
-    "1. Exercise 1: Setting up authentication and cloud buckets\n",
+    "1. Exercise 1: Copying data with AWS \n",
     "2. Exercise 2: Copying data with Skyplane \n",
     "3. Exercise 3: Copying data to multiple destinations (multicast) \n",
     "5. Exercise 4: Cleanup \n",
@@ -121,7 +121,7 @@
    "outputs": [],
    "source": [
     "# Please run this cell\n",
-    "!pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-tutorial-2023#egg=skyplane[aws]\""
+    "!pip install -U \"git+https://github.com/skyplane-project/skyplane.git@skycamp-2023#egg=skyplane[aws]\""
    ]
   },
   {
@@ -163,6 +163,26 @@
    "metadata": {},
    "source": [
     "# Creating Buckets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up AWS credentials "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "💻 `aws configure`\n",
+    "```\n",
+    "AWS Access Key ID [****************ZAWO]: \n",
+    "AWS Secret Access Key [****************WtGD]: \n",
+    "Default region name [us-east-1]: \n",
+    "Default output format [json]: \n",
+    "```"
    ]
   },
   {
