--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -233,6 +233,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Configure Skyplane with AWS credentials. \n",
+    "\n",
+    "#### <span style=\"color:red\">Choose `Y` only for AWS, and `n` for GCP and Azure.</span>\n",
+    "\n",
+    "💻 `skyplane init`\n",
+    "\n",
+    "```\n",
+    " _____ _   ____   _______ _       ___   _   _  _____ \n",
+    "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
+    "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
+    "\n",
+    "03:37:54 [DEBUG] Found existing configuration file at /root/.skyplane/config, \n",
+    "loading\n",
+    "\n",
+    "(1) Configuring AWS:\n",
+    "    Do you want to configure AWS support in Skyplane? [Y/n]:\n",
+    "    Loaded AWS credentials from the AWS CLI [IAM access key ID: ...ZEXYJW]\n",
+    "    AWS region config file saved to /root/.skyplane/aws_config\n",
+    "\n",
+    "(2) Configuring Azure:\n",
+    "    Do you want to configure Azure support in Skyplane? [Y/n]: n\n",
+    "    Disabling Azure support\n",
+    "\n",
+    "(3) Configuring GCP:\n",
+    "    Do you want to configure GCP support in Skyplane? [Y/n]: n\n",
+    "    Disabling Google Cloud support\n",
+    "\n",
+    "Config file saved to /root/.skyplane/config\n",
+    "To disable performance logging info: \n",
+    "https://skyplane.org/en/latest/performance_stats_collection.html\n",
+    "```\n",
+    "\n",
+    "\n",
+    "> **💡 Hint** - If you run into any issues, please contact one of the Skyplane team members immediately. This step is critical to follow through the tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transferring with Skyplane "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "💻 `skyplane cp --recursive s3://skycamp-demo-bucket/gorilla/ s3://gorilla-weights-[name]`\n",
     "\n",
     "```\n",
