update the output

--- a/skycamp.ipynb
+++ b/skycamp.ipynb
@@ -217,7 +217,18 @@
     "\n",
     "💻 `aws s3 cp --recursive s3://skycamp-demo-bucket/gorilla/ s3://gorilla-weights-[name]`\n",
     "\n",
-    "\n",
+    "```\n",
+    "copy: s3://skycamp-demo-bucket/gorilla/pytorch_model-00002-of-00002.bin to s3://gorilla-weights-new-bucket/pytorch_model-00002-of-00002.bin\n",
+    "Completed 7.3 GiB/12.4 GiB (18.7 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.7 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.8 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.8 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.7 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.7 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.8 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.8 MiB/s) with 1 file(s) \n",
+    "Completed 7.4 GiB/12.4 GiB (18.7 MiB/s) with 1 file(s) \n",
+    "```\n",
     "\n",
     "### This will take a long time to complete. Feel free to interrupt the command. Notice that it copies data at under 25 MiB/s."
    ]
@@ -286,38 +297,38 @@
     "💻 `skyplane cp --recursive s3://skycamp-demo-bucket/gorilla/ s3://gorilla-weights-[name]`\n",
     "\n",
     "```\n",
-    " _____ _   ____   _______ _       ___   _   _  _____\n",
+    " _____ _   ____   _______ _       ___   _   _  _____ \n",
     "/  ___| | / /\\ \\ / / ___ \\ |     / _ \\ | \\ | ||  ___|\n",
-    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__\n",
-    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __|\n",
-    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___\n",
+    "\\ `--.| |/ /  \\ V /| |_/ / |    / /_\\ \\|  \\| || |__  \n",
+    " `--. \\    \\   \\ / |  __/| |    |  _  || . ` ||  __| \n",
+    "/\\__/ / |\\  \\  | | | |   | |____| | | || |\\  || |___ \n",
     "\\____/\\_| \\_/  \\_/ \\_|   \\_____/\\_| |_/\\_| \\_/\\____/\n",
     "\n",
-    "\n",
-    "Will transfer 32 objects totaling 35.90GB from aws:us-east-1 to aws:us-east-1\n",
-    "    VMs to provision: 1x aws:us-east-1\n",
-    "    part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00000-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "    part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00001-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "    ...\n",
-    "a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "    part-00030-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet => part-00030-5b54c5d5-bbcf-484d-a2ce-0d6f73df1a36-c000.snappy.parquet\n",
-    "\n",
+    "13:34:22 [WARN]  Bucket location skycamp-demo-bucket is not public. Assuming region is \n",
+    "us-east-1\n",
+    "Logging to: /tmp/skyplane/transfer_logs/20231020_133422-b07cc30f/client.log\n",
+    "Using Skyplane version 0.3.2\n",
+    "Will transfer objects from aws:us-east-1 to aws:ap-south-1\n",
+    "  VMs to provision: 1x aws:ap-south-1, 1x aws:us-east-1\n",
+    "  Estimated egress cost: $0.02/GB\n",
+    "  ⠦ Querying objects for transfer...13:34:25 \n",
+    "  s3://skycamp-demo-bucket/gorilla/ => s3://gorilla-weights-new-bucket/ (0B)\n",
+    "  s3://skycamp-demo-bucket/gorilla/pytorch_model-00001-of-00002.bin => \n",
+    "s3://gorilla-weights-new-bucket/pytorch_model-00001-of-00002.bin (9.26GB)\n",
+    "  s3://skycamp-demo-bucket/gorilla/pytorch_model-00002-of-00002.bin => \n",
+    "s3://gorilla-weights-new-bucket/pytorch_model-00002-of-00002.bin (3.13GB)\n",
     "Continue? [Y/n]: Y\n",
-    "Transfer starting (Tip: Enable auto-confirmation with `skyplane config set autoconfirm true`)\n",
-    "\n",
-    "Storing debug information for transfer in /tmp/skyplane/transfer_logs/20221018_205648/client.log\n",
-    "✓ Initializing cloud keys (3/3) in 2.84s\n",
-    "✓ Provisioning gateway instances (1/1) in 34.48s\n",
-    "✓ Installing gateway package (1/1) in 12.41s\n",
-    "🚀 35.90GB transfer job launched\n",
-    "  Transfer progress (completing multi-part uploads) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 35.9/35.9 GiB 602.0 MB/s 0:00:00\n",
-    "✓ Deprovisioning instances (1/1) in 2.42s\n",
-    "⠙ Verifying all files were copied\n",
+    "Transfer starting (Tip: Enable auto-confirmation with `skyplane config set autoconfirm \n",
+    "true`)\n",
+    "✓ Provisioning VMs (2/2) in 44.38s\n",
+    "✓ Starting gateway container on VMs (2/2) in 46.70s\n",
+    "⠏ Dispatching chunks... ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 0/? bytes13:36:44 \n",
+    "  Transfer progress aws:ap-south-1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 12.4/12.4 GiB 411.5 MB/s 0:00:00\n",
+    "✓ Completing multipart uploads (2/2) in 4.86s\n",
     "\n",
     "✅ Transfer completed successfully\n",
-    "Transfer runtime: 61.94s, Throughput: 4.64Gbps\n",
-    "\n",
-    "```\n"
+    "Transfer runtime: 44.20s, Throughput: 2.24Gbps\n",
+    "```"
    ]
   },
   {
@@ -406,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.object_store().delete_bucket(bucket_name, provider=\"aws\")"
+    "client.object_store().delete_bucket(\"gorilla-weights-[name]\", provider=\"aws\")"
    ]
   },
   {
@@ -415,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.object_store().delete_bucket(another_bucket_name, provider=\"aws\")"
+    "client.object_store().delete_bucket(\"gorilla-[name]\", provider=\"aws\")"
    ]
   },
   {
